# MEIA-LAB

./: .dockerignore  .gitignore  Dockerfile  PROJECT_REVIEW.md  README.md  docker-compose.yml  project_idea.docx  pyproject.toml  requirements.txt  vercel.json
backend/: __init__.py  run_agent.py  service.py
backend/agents/: __init__.py  langchain_utils.py  registry.py
backend/agents/asr/: __init__.py  agent.py  config.py  processors.py  utils.py
backend/agents/base/: __init__.py  base_agent.py  exceptions.py  schemas.py
backend/agents/filing/: __init__.py  agent.py  chroma_store.py  config.py  processors.py  sec_client.py  utils.py
backend/agents/orchestrator/: __init__.py  agent.py  config.py  graph.py  pipeline.py  processors.py  utils.py
backend/agents/vision/: __init__.py  agent.py  config.py  processors.py  utils.py
backend/api/: __init__.py  main.py
backend/core/: groq_client.py  queue_worker.py  rate_limiter.py  retry.py
docs/: hackathon_submission_materials.md
frontend/: .env.production  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  styles.css
frontend/src/data/: mockAnalysis.js
frontend/src/lib/: types.js
frontend/src/pages/: BriefPage.jsx  ClaimsPage.jsx  DashboardPage.jsx  EvidencePage.jsx  ProcessingPage.jsx
frontend/src/services/: analysisService.js  backendAdapter.js  pipelineStatus.js  (+1 more)
tests/: __init__.py  test_agents_integration.py  test_asr_processors.py  test_groq_components.py  test_langchain_utils.py  test_orchestrator_pipeline.py  test_orchestrator_report.py  test_sec_client.py
(+22 files in other folders)
