[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meia-lab"
version = "0.1.0"
description = "React and FastAPI monorepo"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.111.0,<1.0.0",
	"uvicorn[standard]>=0.30.0,<1.0.0",
	"python-multipart>=0.0.9,<1.0.0",
	"pydantic>=2.7.0,<3.0.0",
	"python-dotenv>=1.0.1,<2.0.0",
	"httpx>=0.27.0,<1.0.0",
	"beautifulsoup4>=4.12.3,<5.0.0",
	"groq>=0.9.0,<1.0.0",
	"langchain-core>=0.2.0,<0.4.0",
]

[project.optional-dependencies]
analysis = [
	"langchain>=0.2.0,<0.4.0",
	"langchain-community>=0.2.0,<0.4.0",
	"langchain-openai>=0.1.0,<0.4.0",
	"langchain-aimlapi>=0.0.1",
	"langchain-huggingface>=0.0.3,<1.0.0",
	"langchain-chroma>=0.1.0,<1.0.0",
	"langchain-text-splitters>=0.2.0,<1.0.0",
	"langgraph>=0.1.0,<1.0.0",
	"chromadb>=0.5.0,<1.0.0",
	"librosa>=0.10.1,<1.0.0",
	"soundfile>=0.12.1,<1.0.0",
	"numpy>=1.26.0,<3.0.0",
	"PyMuPDF>=1.24.0,<2.0.0",
	"Pillow>=10.2.0,<12.0.0",
]

[tool.vercel]
entrypoint = "backend.api.main:app"
